--- a/pract3-fastify/nginx/nginx.conf
+++ b/pract3-fastify/nginx/nginx.conf
@@ -1,7 +1,13 @@
 server {
-        listen 80;
-        
-        location /api {
+    listen 80;
+
+    # Serve favicon.ico
+    location = /favicon.ico {
+       rewrite ^ /favicon.svg;
+    }
+
+    # Proxy all other API requests to Node.js
+    location /api {
         rewrite ^/api(/.*)$ $1 break;  # Strip `/api` prefix from the URL
 
         proxy_pass http://app:3000;  # 'app' is the service name in docker-compose
@@ -36,4 +42,4 @@ server {
         root /usr/share/nginx/html;  # The directory containing the static files
         index index.html;            # The static HTML file to serve
     }
-    }
+}
