--- a/pract3-fastify/package.json
+++ b/pract3-fastify/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "pract1-docker",
+  "name": "pract3-fastify",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "docker-compose up --build -d"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "@types/node": "22.5.5"
