--- a/pract4-databases/package.json
+++ b/pract4-databases/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "docker-compose up --build -d",
+    "dev": "docker compose up --build -d",
     "db:sync": "source .env && prisma db push && prisma generate",
     "lint": "eslint ./ --fix",
     "prepare": "husky"
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "husky": "9.1.6",
     "neostandard": "0.11.6",
+    "nodemon": "3.1.7",
     "prettier": "3.3.3"
   },
   "dependencies": {
@@ -32,5 +33,6 @@
     "mongodb": "6.9.0",
     "pino-pretty": "11.2.2",
     "prisma": "5.20.0"
-  }
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
