--- a/pract5-architecture/Dockerfile
+++ b/pract5-architecture/Dockerfile
@@ -3,11 +3,14 @@ FROM node:22 AS development
 
 # Set SHELL environment variable to a supported shell
 ENV SHELL=/bin/bash
+
 # Install pnpm globally using corepack
 RUN corepack enable && corepack prepare pnpm@latest --activate
+
 # Set PNPM_HOME to define the global bin directory and add it to PATH
 ENV PNPM_HOME=/node/.local/share/pnpm
 ENV PATH=$PNPM_HOME:$PATH
+
 # Run pnpm setup to configure global bin directory
 RUN pnpm setup
 
@@ -29,10 +32,10 @@ COPY --chown=node:node . .
 # Switch to the node user
 USER node
 
-RUN if [ "$REBUILD_PRISMA_CLIENT" = "true" ]; then \
-    #npm db:sync && npx prisma generate; \
-    npm run db:sync; \
-    fi
+# Conditionally sync the database and rebuild Prisma Client
+RUN if [ "$PRISMA_SYNC_DB" = "true" ]; then pnpm db:sync; fi && \
+    if [ "$PRISMA_REBUILD_CLIENT" = "true" ]; then pnpm db:client; fi
+
 # Expose the port the app runs on
 EXPOSE 3000
 
@@ -43,5 +46,4 @@ EXPOSE 9229
 ENV NODE_ENV=development
 
 # Use nodemon for automatic server reloads in development
-# CMD ["nodemon", "--inspect=0.0.0.0:9229", "server.js"]
 CMD ["pnpm", "exec", "nodemon", "--inspect=0.0.0.0:9229", "server.js"]
