--- a/pract5-architecture/package.json
+++ b/pract5-architecture/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "docker compose up --build -d",
-    "db:sync": "source .env && prisma db push",
+    "db:sync": "bash -c \"source .env && prisma db push\"",
+    "db:client": "prisma generate",
     "lint": "eslint ./src --fix",
     "format": "prettier --write ./src"
   },
